@@ -18,31 +18,37 @@
 package org.apache.solr.util;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.function.BiConsumer;
 import java.util.function.Function;
 import java.util.function.Predicate;
-import org.apache.solr.cluster.api.SimpleMap;
+import java.util.stream.Collectors;
 import org.apache.solr.common.ConfigNode;
 import org.apache.solr.common.util.PropertiesUtil;
-import org.apache.solr.common.util.WrappedSimpleMap;
 
-/** ConfigNode impl that copies and maintains data internally from DOM */
+/**
+ * ConfigNode impl that applies property substitutions on access.
+ *
+ * <p>This class wraps another {@link ConfigNode} and applies property substitution immediately when
+ * the {@link #txt} or {@link #attributes} methods are called. Because property substition is based
+ * on ThreadLocal values, These methods <em>MUST</em> be called while those variables are "active"
+ *
+ * @see ConfigNode#SUBSTITUTES
+ * @see PropertiesUtil#substitute
+ */
 public class DataConfigNode implements ConfigNode {
-  public final String name;
-  public final SimpleMap<String> attributes;
-  public final SimpleMap<List<ConfigNode>> kids;
-  public final String textData;
+  private final String name;
+  private final Map<String, String> rawAttributes;
+  private final Map<String, List<ConfigNode>> kids;
+  private final String rawTextData;
 
   public DataConfigNode(ConfigNode root) {
     Map<String, List<ConfigNode>> kids = new LinkedHashMap<>();
     name = root.name();
-    attributes = wrap(root.attributes());
-    textData = root.txt();
+    rawAttributes = root.attributes();
+    rawTextData = root.txt();
     root.forEachChild(
         it -> {
           List<ConfigNode> nodes = kids.computeIfAbsent(it.name(), k -> new ArrayList<>());
@@ -54,31 +60,11 @@ public class DataConfigNode implements ConfigNode {
         e.setValue(List.copyOf(e.getValue()));
       }
     }
-    this.kids = kids.isEmpty() ? EMPTY : new WrappedSimpleMap<>(Map.copyOf(kids));
+    this.kids = Map.copyOf(kids);
   }
 
-  public String subtituteVal(String s) {
+  private static String substituteVal(String s) {
     return PropertiesUtil.substitute(s, SUBSTITUTES.get());
-  }
-
-  private SimpleMap<String> wrap(SimpleMap<String> delegate) {
-    if (delegate.size() == 0) return delegate; // avoid unnecessary object creation
-    return new SimpleMap<>() {
-      @Override
-      public String get(String key) {
-        return subtituteVal(delegate.get(key));
-      }
-
-      @Override
-      public void forEachEntry(BiConsumer<String, ? super String> fun) {
-        delegate.forEachEntry((k, v) -> fun.accept(k, subtituteVal(v)));
-      }
-
-      @Override
-      public int size() {
-        return delegate.size();
-      }
-    };
   }
 
   @Override
@@ -86,14 +72,33 @@ public class DataConfigNode implements ConfigNode {
     return name;
   }
 
+  /** Each call to this method returns a (new) copy of the original txt with substitions applied. */
   @Override
   public String txt() {
-    return subtituteVal(textData);
+    return substituteVal(rawTextData);
   }
 
+  /**
+   * Each call to this method returns a (new) copy of the original Map with substitions applied to
+   * the values.
+   */
   @Override
-  public SimpleMap<String> attributes() {
-    return attributes;
+  public Map<String, String> attributes() {
+    if (rawAttributes.isEmpty()) return rawAttributes; // avoid unnecessary object creation
+
+    // Note: using the the 4 arg toMap to force LinkedHashMap.
+    // Duplicate keys should be impossible, but toMap makes us specify a mergeFunction
+    return rawAttributes.entrySet().stream()
+        .collect(
+            Collectors.toMap(
+                Map.Entry::getKey,
+                e -> {
+                  return substituteVal(e.getValue());
+                },
+                (v, vv) -> {
+                  throw new IllegalStateException();
+                },
+                LinkedHashMap::new));
   }
 
   @Override
@@ -104,13 +109,17 @@ public class DataConfigNode implements ConfigNode {
 
   @Override
   public List<ConfigNode> getAll(String name) {
-    return kids.get(name, Collections.emptyList());
+    return kids.getOrDefault(name, List.of());
   }
 
   @Override
-  public List<ConfigNode> getAll(Predicate<ConfigNode> test, Set<String> matchNames) {
+  public List<ConfigNode> getAll(Set<String> names, Predicate<ConfigNode> test) {
+    if (names == null) {
+      return ConfigNode.super.getAll(names, test);
+    }
+    // fast implementation based on our index on named children:
     List<ConfigNode> result = new ArrayList<>();
-    for (String s : matchNames) {
+    for (String s : names) {
       List<ConfigNode> vals = kids.get(s);
       if (vals != null) {
         vals.forEach(
@@ -126,14 +135,11 @@ public class DataConfigNode implements ConfigNode {
 
   @Override
   public void forEachChild(Function<ConfigNode, Boolean> fun) {
-    kids.forEachEntry(
+    kids.forEach(
         (s, configNodes) -> {
           if (configNodes != null) {
             configNodes.forEach(fun::apply);
           }
         });
   }
-
-  public static final SimpleMap<List<ConfigNode>> EMPTY =
-      new WrappedSimpleMap<>(Collections.emptyMap());
 }
