@@ -17,13 +17,12 @@
 
 package org.apache.solr.common.cloud;
 
-import java.io.File;
 import java.io.IOException;
 import java.lang.invoke.MethodHandles;
+import java.nio.file.FileSystems;
 import java.nio.file.FileVisitResult;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.SimpleFileVisitor;
 import java.nio.file.attribute.BasicFileAttributes;
 import java.util.ArrayList;
@@ -34,6 +33,7 @@ import java.util.Set;
 import java.util.function.Predicate;
 import java.util.regex.Pattern;
 import org.apache.solr.client.solrj.SolrServerException;
+import org.apache.solr.common.SolrException;
 import org.apache.solr.common.util.StrUtils;
 import org.apache.zookeeper.CreateMode;
 import org.apache.zookeeper.KeeperException;
@@ -66,28 +66,27 @@ public class ZkMaintenanceUtils {
    * Lists a ZNode child and (optionally) the znodes of all the children. No data is dumped.
    *
    * @param path The node to remove on Zookeeper
-   * @param recurse Whether to remove children.
+   * @param recursive Whether to remove children.
    * @throws KeeperException Could not perform the Zookeeper operation.
    * @throws InterruptedException Thread interrupted
-   * @throws SolrServerException zookeeper node has children and recurse not specified.
    * @return an indented list of the znodes suitable for display
    */
-  public static String listZnode(SolrZkClient zkClient, String path, Boolean recurse)
-      throws KeeperException, InterruptedException, SolrServerException {
+  public static String listZnode(SolrZkClient zkClient, String path, Boolean recursive)
+      throws KeeperException, InterruptedException {
     String root = path;
 
     if (path.toLowerCase(Locale.ROOT).startsWith("zk:")) {
       root = path.substring(3);
     }
-    if (root.equals("/") == false && root.endsWith("/")) {
+    if (!root.equals("/") && root.endsWith("/")) {
       root = root.substring(0, root.length() - 1);
     }
 
     StringBuilder sb = new StringBuilder();
 
-    if (recurse == false) {
+    if (!recursive) {
       for (String node : zkClient.getChildren(root, null, true)) {
-        if (node.equals("zookeeper") == false) {
+        if (!node.equals("zookeeper")) {
           sb.append(node).append(System.lineSeparator());
         }
       }
@@ -102,7 +101,9 @@ public class ZkMaintenanceUtils {
           if (znode.startsWith("/zookeeper")) return; // can't do anything with this node!
           int iPos = znode.lastIndexOf('/');
           if (iPos > 0) {
-            for (int idx = 0; idx < iPos; ++idx) sb.append(" ");
+            for (int idx = 0; idx < iPos; ++idx) {
+              sb.append(" ");
+            }
             sb.append(znode.substring(iPos + 1)).append(System.lineSeparator());
           } else {
             sb.append(znode).append(System.lineSeparator());
@@ -117,9 +118,9 @@ public class ZkMaintenanceUtils {
    * copying recursively.
    *
    * @param src Source to copy from. Both src and dst may be Znodes. However, both may NOT be local
-   * @param dst The place to copy the files too. Both src and dst may be Znodes. However both may
+   * @param dst The place to copy the files too. Both src and dst may be Znodes. However, both may
    *     NOT be local
-   * @param recurse if the source is a directory, reccursively copy the contents iff this is true.
+   * @param recursive if the source is a directory, recursively copy the contents iff this is true.
    * @throws SolrServerException Explanatory exception due to bad params, failed operation, etc.
    * @throws KeeperException Could not perform the Zookeeper operation.
    * @throws InterruptedException Thread interrupted
@@ -130,25 +131,23 @@ public class ZkMaintenanceUtils {
       Boolean srcIsZk,
       String dst,
       Boolean dstIsZk,
-      Boolean recurse)
+      Boolean recursive)
       throws SolrServerException, KeeperException, InterruptedException, IOException {
 
-    if (srcIsZk == false && dstIsZk == false) {
+    if (!srcIsZk && !dstIsZk) {
       throw new SolrServerException("One or both of source or destination must specify ZK nodes.");
     }
 
-    // Make sure --recurse is specified if the source has children.
-    if (recurse == false) {
+    // Make sure --recursive is specified if the source has children.
+    if (!recursive) {
       if (srcIsZk) {
         if (zkClient.getChildren(src, null, true).size() != 0) {
           throw new SolrServerException(
-              "Zookeeper node " + src + " has children and recurse is false");
+              "Zookeeper node " + src + " has children and recursive is false");
         }
-      } else if (Files.isDirectory(Paths.get(src))) {
+      } else if (Files.isDirectory(Path.of(src))) {
         throw new SolrServerException(
-            "Local path "
-                + Paths.get(src).toAbsolutePath()
-                + " is a directory and recurse is false");
+            "Local path " + Path.of(src).toAbsolutePath() + " is a directory and recurse is false");
       }
     }
 
@@ -165,7 +164,7 @@ public class ZkMaintenanceUtils {
 
     // local -> ZK copy
     if (dstIsZk) {
-      uploadToZK(zkClient, Paths.get(src), dst, null);
+      uploadToZK(zkClient, Path.of(src), dst, null);
       return;
     }
 
@@ -173,19 +172,19 @@ public class ZkMaintenanceUtils {
     // node has children. This is kind of a weak test for the notion of "directory" on Zookeeper. ZK
     // -> local copy where ZK is a parent node
     if (zkClient.getChildren(src, null, true).size() > 0) {
-      downloadFromZK(zkClient, src, Paths.get(dst));
+      downloadFromZK(zkClient, src, Path.of(dst));
       return;
     }
 
     // Single file ZK -> local copy where ZK is a leaf node
-    if (Files.isDirectory(Paths.get(dst))) {
-      if (dst.endsWith(File.separator) == false) {
-        dst += File.separator;
+    if (Files.isDirectory(Path.of(dst))) {
+      if (!dst.endsWith(FileSystems.getDefault().getSeparator())) {
+        dst += FileSystems.getDefault().getSeparator();
       }
       dst = normalizeDest(src, dst, srcIsZk, dstIsZk);
     }
     byte[] data = zkClient.getData(src, null, null, true);
-    Path filename = Paths.get(dst);
+    Path filename = Path.of(dst);
     Path parentDir = filename.getParent();
     if (parentDir != null) {
       Files.createDirectories(parentDir);
@@ -200,11 +199,11 @@ public class ZkMaintenanceUtils {
       String srcName, String dstName, boolean srcIsZk, boolean dstIsZk) {
     // Special handling for "."
     if (dstName.equals(".")) {
-      return Paths.get(".").normalize().toAbsolutePath().toString();
+      return Path.of(".").normalize().toAbsolutePath().toString();
     }
 
-    String dstSeparator = (dstIsZk) ? "/" : File.separator;
-    String srcSeparator = (srcIsZk) ? "/" : File.separator;
+    String dstSeparator = (dstIsZk) ? "/" : FileSystems.getDefault().getSeparator();
+    String srcSeparator = (srcIsZk) ? "/" : FileSystems.getDefault().getSeparator();
 
     // Dest is a directory or non-leaf znode, append last element of the src path.
     if (dstName.endsWith(dstSeparator)) {
@@ -239,13 +238,13 @@ public class ZkMaintenanceUtils {
     clean(zkClient, src);
   }
 
-  // Insure that all the nodes in one path match the nodes in the other as a safety check before
+  // Ensure that all the nodes in one path match the nodes in the other as a safety check before
   // removing the source in a 'mv' command.
   private static void checkAllZnodesThere(SolrZkClient zkClient, String src, String dst)
       throws KeeperException, InterruptedException, SolrServerException {
 
     for (String node : zkClient.getChildren(src, null, true)) {
-      if (zkClient.exists(dst + "/" + node, true) == false) {
+      if (!zkClient.exists(dst + "/" + node, true)) {
         throw new SolrServerException(
             "mv command did not move node " + dst + "/" + node + " source left intact");
       }
@@ -323,7 +322,7 @@ public class ZkMaintenanceUtils {
       path = path.substring(0, path.length() - 1);
     }
 
-    final Path rootPath = Paths.get(path);
+    final Path rootPath = Path.of(path);
 
     if (!Files.exists(rootPath)) {
       throw new IOException("Path " + rootPath + " does not exist");
@@ -346,17 +345,17 @@ public class ZkMaintenanceUtils {
               return FileVisitResult.CONTINUE;
             }
             if (isFileForbiddenInConfigSets(filename)) {
-              log.info(
-                  "uploadToZK skipping '{}' due to forbidden file types '{}'",
-                  filename,
-                  USE_FORBIDDEN_FILE_TYPES);
-              return FileVisitResult.CONTINUE;
+              throw new SolrException(
+                  SolrException.ErrorCode.BAD_REQUEST,
+                  "The file type provided for upload, '"
+                      + filename
+                      + "', is forbidden for use in uploading configsets.");
             }
             // TODO: Cannot check MAGIC header for file since FileTypeGuesser is in core
             String zkNode = createZkNodeName(zkPath, rootPath, file);
             try {
               // if the path exists (and presumably we're uploading data to it) just set its data
-              if (file.toFile().getName().equals(ZKNODE_DATA_FILE)
+              if (file.getFileName().toString().equals(ZKNODE_DATA_FILE)
                   && zkClient.exists(zkNode, true)) {
                 zkClient.setData(zkNode, file, true);
               } else if (file == rootPath) {
@@ -440,7 +439,7 @@ public class ZkMaintenanceUtils {
     try {
       List<String> children = zkClient.getChildren(zkPath, null, true);
       // If it has no children, it's a leaf node, write the associated data from the ZNode.
-      // Otherwise, continue recursing, but write the associated data to a special file if any
+      // Otherwise, continue recursively traversing, but write any associated data to a special file
       if (children.size() == 0) {
         // If we didn't copy data down, then we also didn't create the file. But we still need a
         // marker on the local disk so create an empty file.
@@ -460,7 +459,9 @@ public class ZkMaintenanceUtils {
 
         for (String child : children) {
           String zkChild = zkPath;
-          if (zkChild.endsWith("/") == false) zkChild += "/";
+          if (!zkChild.endsWith("/")) {
+            zkChild += "/";
+          }
           zkChild += child;
           if (isEphemeral(zkClient, zkChild)) { // Don't copy ephemeral nodes
             continue;
@@ -493,10 +494,10 @@ public class ZkMaintenanceUtils {
 
   /**
    * Recursively visit a zk tree rooted at path and apply the given visitor to each path. Exists as
-   * a separate method because some of the logic can get nuanced.
+   * a separate method because the logic can get nuanced.
    *
    * @param path the path to start from
-   * @param visitOrder whether to call the visitor at the at the ending or beginning of the run.
+   * @param visitOrder whether to call the visitor at the ending or beginning of the run.
    * @param visitor the operation to perform on each path
    */
   public static void traverseZkTree(
@@ -555,14 +556,17 @@ public class ZkMaintenanceUtils {
   public static String createZkNodeName(String zkRoot, Path root, Path file) {
     String relativePath = root.relativize(file).toString();
     // Windows shenanigans
-    if ("\\".equals(File.separator)) relativePath = relativePath.replace("\\", "/");
+    if ("\\".equals(FileSystems.getDefault().getSeparator()))
+      relativePath = relativePath.replace("\\", "/");
     // It's possible that the relative path and file are the same, in which case
     // adding the bare slash is A Bad Idea unless it's a non-leaf data node
-    boolean isNonLeafData = file.toFile().getName().equals(ZKNODE_DATA_FILE);
-    if (relativePath.length() == 0 && isNonLeafData == false) return zkRoot;
+    boolean isNonLeafData = file.getFileName().toString().equals(ZKNODE_DATA_FILE);
+    if (relativePath.length() == 0 && !isNonLeafData) return zkRoot;
 
     // Important to have this check if the source is file:whatever/ and the destination is just zk:/
-    if (zkRoot.endsWith("/") == false) zkRoot += "/";
+    if (!zkRoot.endsWith("/")) {
+      zkRoot += "/";
+    }
 
     String ret = zkRoot + relativePath;
 
@@ -679,8 +683,9 @@ public class ZkMaintenanceUtils {
     @Override
     public void visit(String path) throws InterruptedException, KeeperException {
       String finalDestination = dest;
-      if (path.equals(source) == false)
+      if (!path.equals(source)) {
         finalDestination += "/" + path.substring(source.length() + 1);
+      }
       zkClient.makePath(finalDestination, false, true);
       zkClient.setData(finalDestination, zkClient.getData(path, null, null, true), true);
     }
